# computer-vision-streamlit-app

./: .gitignore  Dockerfile  README.md  install_app.bat  install_app.sh  main_dashboard.py  package.json  requirements.txt  setup.cfg  setup.py  setup_permission.sh  start_app.bat  start_app.sh  streamlit_app.py  test.py  test.txt
.devcontainer/: devcontainer.json
computer_vision_streamlit_app/analyze_segments/: __init__.py  calc_2d_cog_binary_mask.py  segment_extractors.py  xyn_to_bin_mask.py
computer_vision_streamlit_app/dataset_csv/: __init__.py  extract_from_dataset_csv.py
computer_vision_streamlit_app/extract_skeleton/: combine_masks.py  extract_skeleton_w_cogs.py  line_refiner.py  orthogonal_slicer.py  plot_skeleton.py  point_orderer.py  polynom_regression_in_mask.py
computer_vision_streamlit_app/focus_stacking/: depth_from_focus.py  depth_refinement.py  image_alignment.py  new_stacker.py  stacker.py
computer_vision_streamlit_app/gui_dashboard/: __init__.py  button_download.py  button_inference.py  display_sidebar_elements.py  process_vol_est_main.py  process_zip_annotations.py  show_results.py
examples/: ex_dataset_csv.py  ex_new_data_integration.py  ex_sceleton_from_masks.py  ex_yolov8seg_json_viz.py  ex_yolov8seg_prediction_extraction.py  ex_yolov8seg_prediction_viz.py  ex_yolov8seg_segments_analyzer.py  test.py  test_point_regression.ipynb
playground/: analyze_enhanced_csv.ipynb  analyze_extracted_volumes.ipynb  analyze_volume.ipynb  test_point_regression.ipynb
tachinidae_analyzer/: __init__.py
test/: test_length_estimation.py
(+1738 files in other folders)
