[metadata]
name = tachinidae_analyzer
version = 1.0
author = <Joshua Albiez>
author_email = uvtoc@student.kit.edu
description = A package to analyze the detection of tachinidae flies in images
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = tachinidae_analyzer