[metadata]
name = computer_vision_streamlit_app
version = 1.0
author = <Joshua Albiez>
author_email = joshua.albiez3@gmail.com
description = A package to analyze the detection of objects in images
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = computer_vision_streamlit_app